2008-01-03  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_Constants.py: added QR_NOTE, QR_DATE
	* src/gen/lib/date.py: working on date math
	* src/plugins/AgeOnDate.py: new Quick View for age on date
	* src/plugins/DefaultGadgets.py: added Age on Date gadget
	* src/QuickReports.py: new constants
	* src/Simple/_SimpleTable.py: handle sort columns

2008-01-03  Gary Burton <gary.burton@zen.co.uk>
	* src/Selectors/_SelectPerson.py: the select person dialog now allows a
	person to be selected by using the keyboard. This dialog really needs an
	overhaul so that it can use the BaseSelector class as SelectFamily does.
	However a PeopleModel based on BaseModel is required for this as the
	existing PeopleModel is a custom built class. bug #1456

2008-01-03 Jérôme Rapinat <romjerome@yahoo.fr>
        * src/configure.in : add bulgarian

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: remove unneeded show, remove tabs

2008-01-02  Brian Matherly <brian@gramps-project.org>
	* src/DisplayModels/_PeopleModel.py: Fix filter bug.

2008-01-02 Jim Sack <jgsack@san.rr.com>
	* src/const.py.in : change embedded copyright sign to unicode \u00A9
	(really) instead of the \U (oops) 

2008-01-02 Jim Sack <jgsack@san.rr.com>
	* src/const.py.in : change embedded copyright sign to unicode \u00A9
	and eliminate call to unicode(), as well as the "coding cookie"
	at the top of file, since there is no longer any non-ASCII

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Filters/SideBar/_PlaceSidebarFilter.py: correct string, bug #1275

2008-01-02  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Simple/_SimpleTable.py (SimpleTable.row): added obj handlers
	* src/plugins/References.py: new quick report for listing refs

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbLoader.py: correct bug state -> dbstate

2008-01-02  Stéphane Charette <stephanecharette@gmail.com>