@@ -1,3 +1,6 @@
+2008-01-03 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/RelCalc.py: managed window error, bug 1499
+
 2008-01-03  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/ReportBase/_Constants.py: added QR_NOTE, QR_DATE
 	* src/gen/lib/date.py: working on date math
